2017-03-31 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2017-03-31 Fred Gleason <fredg@paravelsystems.com>
	* Added 'COPYING'.
2017-03-31 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
2017-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added the '--skip_lockkeys' switch to the x11vnc(1) call in
	'x11vnc-auto@.service'.
2017-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added 'x11vnc-auto.spec'.
2017-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.
2017-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Added build system for generating RPMs.
2017-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a '-timeout 5' argument to the x11vnc(1) invocation.
2017-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.0.
2018-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Modified service to run x11vnc(1) under user 'rd' rather than 'root'.
2018-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Updated the 'NEWS' file.
	* Incremented the package version to 0.9.0.
2018-03-30 Fred Gleason <fredg@paravelsystems.com>
	* Modified the SystemD socket service to bind IPv4 only.
2018-03-30 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 0.9.1.
2019-02-05 Fred Gleason <fredg@paravelsystems.com>
	* Changed the VNC timeout from 5 to 30 seconds.
2019-02-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0.
2021-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make deb' target.