@@ -1,10 +1,10 @@
 Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
-Upstream-Name: glassplayer
+Upstream-Name: x11vnc-auto
 Upstream-Contact: fredg@paravelsystems.com
-Source: https://github.com/RadioFreeAsia/GlassPlayer
+Source: https://github.com/ElvishArtisan/x11vnc-auto
 
 Files: *
-Copyright: 2021 Fred Gleason <fredg@paravelsystems.com>
+Copyright: 2017-2021 Fred Gleason <fredg@paravelsystems.com>
 License: GPL-2
  This package is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2 as
