@@ -1,0 +1,25 @@
+#!/bin/sh
+# postinst script for x11vnc-auto
+
+case "$1" in
+    configure)
+      /bin/systemctl daemon-reload
+      /bin/systemctl enable x11vnc-auto.socket
+      /bin/systemctl start x11vnc-auto.socket
+    ;;
+
+    abort-upgrade|abort-remove|abort-deconfigure)
+    ;;
+
+    *)
+        echo "postinst called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
